[package]
name = "itt-bot"
version = "1.0.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.5"
tokio = { version = "1.0", features = ["full"] }
http = "0.2.6" 
serde = "1.0.136" 
serde_json = "1.0.79"
hyper = {version = "0.14.17",features = ["full"]}