[package]
name = "itt-bot"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.5"
tokio = { version = "1.0", features = ["full"] }
http = "0.2.6" 
serde = {version ="1.0.136",features =["derive"]} 
serde_json = "1.0.79"
hyper = {version = "0.14.17",features = ["full"]}
hyper-tls = "0.5.0"
regex="1"
splitty="0.1.0"
rand="0.8.5"
tokio-cron-scheduler="0.7"
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.13.0"
anyhow = "1.0"
traq ={path = "./traq"}
earthquake-info = {path = "./earthquake-info"}
[workspace]
members=["traq","earthquake-info"]