[package]
name = "itt-bot"
version = "2.2.9"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.5"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
traq-ws-bot = "0.1.2"
traq = "0.1.0"
clap = { version = "4.3.4", features = ["derive"] }
shlex = "1.1.0"
strip-ansi-escapes = "0.1.1"
regex = "1.8.4"
uuid = "1.3.4"
earthquake-info = { path = "./earthquake-info" }
tokio-cron-scheduler = "0.9.4"
chrono = "0.4.26"
[workspace]
members = ["earthquake-info"]
