[package]
name = "adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = {path="../domain"}
application = {path="../application"}
anyhow = "1.0"
ulid = "1.0.0"
chrono = "0.4"
url = "2.2.2"
async-trait = "0.1.57"
reqwest = { version = "0.11" }
ical = "0.7.*"
