[package]
name = "application"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = {path = "../domain"}
anyhow = "1.0"
ulid = "1.0.0"
chrono = "0.4"
url = "2.2.2"
derive-new="0.5"
futures = "0.3.24"
async-trait = "0.1.57"
