[package]
name = "earthquake-info"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version ="1.0.136",features =["derive"]} 
serde_json = "1.0.79"
regex="1"
tokio-cron-scheduler="0.7"
scraper = "0.13.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1"
reqwest ="0.11.10"
