[package]
name = "earthquake-info"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
regex = "1"
scraper = "0.13.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1"
reqwest = { version = "0.11", features = ["rustls-tls"] }
chrono = "0.4"
